Updated to include the new java run flags for jre16